# zh-education-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.de.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  LICENSE  README.de.md  README.md  RELEASE_NOTES_v0.2.0.md  claude_desktop_config.json  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
audits/2026-05-29T193607-Z-zh-education-mcp/: audit-meta.json  audit-report.md  gen_findings.py  profile.yaml  summary.json  verification-results.json
audits/2026-05-29T193607-Z-zh-education-mcp/findings/: ARCH-003-not-found-anti-pattern-heuristiken-statt-leerer-an.md  ARCH-004-inversion-of-control-transport-agnostische-server.md  ARCH-007-capability-aggregation-composability-intern-atomar.md  ARCH-008-drei-primitive-nutzen-tools-resources-und-prompts.md  ARCH-011-standardisierte-repo-struktur-src-layout-tests-rea.md  ARCH-012-protocolversion-pinning-changelog-sdk-update-diszi.md  CH-004-ogd-ch-lizenz-compliance-cc-by-4-0-attribution.md  OBS-001-protocol-vs-execution-errors-korrekte-trennung.md  OBS-002-mask-error-details-keine-stacktraces-sql-ans-llm.md  OBS-003-structured-logging-mit-rfc-5424-severity-stufen.md  OBS-006-opentelemetry-distributed-tracing-pro-tool-call.md  OPS-001-test-strategie-unit-tests-mocked-live-tests-gemark.md  OPS-003-phasenarchitektur-read-only-first-dann-write-dann.md  SCALE-001-streamable-http-statt-stdio-fuer-cloud-deployments.md  SCALE-002-stateful-load-balancing-fuer-streamable-http-sse.md  SCALE-003-mcp-session-id-routing-via-edge-lb-haproxy-stick-t.md  SCALE-004-containerization-mit-multi-stage-builds.md  SCALE-006-resource-limits-per-container-memory-cpu-fds.md  SDK-001-fastmcp-lifespan-via-asynccontextmanager-asyncexit.md  SDK-002-pydantic-v2-typeddict-dataclass-als-tool-returns.md  SDK-003-context-injection-fuer-progress-reports-und-loggin.md  SDK-004-cors-mcp-session-id-exposure-bei-http-sse.md  SEC-004-ssrf-prevention-https-enforcement-ip-blocklisting.md  SEC-005-dns-rebinding-prevention-dns-pinning-gegen-toctou.md  SEC-007-container-sandboxing-docker-chroot-mit-minimalen-p.md  SEC-009-session-id-cryptographic-binding-user-id-session-i.md  SEC-014-tool-allow-listing-via-mcp-gateway-pattern.md  SEC-015-pre-flight-tool-poisoning-detection.md  SEC-018-input-validation-an-tool-boundaries-pydantic-stric.md  SEC-021-egress-allow-list-code-layer-und-network-layer.md  SEC-022-tool-hash-pinning-namespace-praefix-gegen-rug-pull.md
audits/2026-05-30T070451-Z-zh-education-mcp/: audit-meta.json  audit-report.md  summary.json  verification-results.json
audits/2026-05-30T070451-Z-zh-education-mcp/findings/: OBS-001-protocol-vs-execution-errors-korrekte-trennung.md  OBS-006-opentelemetry-distributed-tracing-pro-tool-call.md  SDK-003-context-injection-fuer-progress-reports-und-loggin.md  SEC-005-dns-rebinding-prevention-dns-pinning-gegen-toctou.md
audits/2026-05-30T072745-Z-zh-education-mcp/: audit-meta.json  audit-report.md  summary.json  verification-results.json
docs/: accepted-risks.md  deployment.md  network-egress.md  roadmap.md  secret-management.md  security.md
src/zh_education_mcp/: __init__.py  config.py  constants.py  data.py  http_client.py  logging_setup.py  models.py  provenance.py  server.py  telemetry.py  tools.py
tests/: test_server.py
