[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "zh-education-mcp"
version     = "0.2.0"
description = "MCP-Server für Bildungsstatistiken des Kantons und der Stadt Zürich (BISTA)"
readme      = "README.md"
license     = { file = "LICENSE" }
authors     = [{ name = "malkreide" }]
requires-python = ">=3.11"

keywords = [
    "mcp", "model-context-protocol", "bildungsstatistik",
    "kanton-zuerich", "bista", "schulkreis", "volksschule", "open-data",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "starlette>=0.37.0",
    "uvicorn>=0.30.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]
# Optionales OpenTelemetry-Tracing (OBS-006). Aktivierung via MCP_OTEL_ENABLED=true.
otel = [
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-instrumentation-httpx>=0.40b0",
]

[project.scripts]
zh-education-mcp = "zh_education_mcp.server:main"

[project.urls]
Homepage   = "https://github.com/malkreide/zh-education-mcp"
Repository = "https://github.com/malkreide/zh-education-mcp"
Issues     = "https://github.com/malkreide/zh-education-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/zh_education_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "-v --tb=short"
markers      = [
    "live: Tests, die echte API-Aufrufe machen (von CI ausgeschlossen)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
